--- a/dn2-Rupnik-Medjedovic-Krzan.Rmd
+++ b/dn2-Rupnik-Medjedovic-Krzan.Rmd
@@ -627,27 +627,30 @@ risi_razlicna_var(1.5, 0.005)
 
 ## Komentar razlik
 
-Prva razlika, ki jo najprej opazimo, je odstopanje od referncnega 95% intervala zaupanja za pravo aposteriorno porazdelitev. Pri vecji vrednosti $\sigma$ je pričakovano več vrednosti izven intervala, pri manjših pa za dvolj pozne clene vse ležijo znotraj intervala. Vzrok tega je simulacija kandidata $\theta^*$ iz porazdelitve $q(\cdot | \theta^{(i)})$, kjer imamo fiksno varianco ($\sigma^2$). 
+Prva razlika, ki jo najprej opazimo, je odstopanje od referncnega 95% intervala zaupanja za pravo aposteriorno porazdelitev. Pri vecji vrednosti $\sigma$ je pricakovano vec vrednosti izven intervala, pri manjsih pa za dvolj pozne clene vse lezijo znotraj intervala. Vzrok tega je simulacija kandidata $\theta^*$ iz porazdelitve $q(\cdot | \theta^{(i)})$, kjer imamo fiksno varianco ($\sigma^2$). 
 
-Ko izberemo večjo vrednost $\sigma$ opazimo, da se vrednost $\theta$ dostikrat v iteraciji ne spremeni, torej velja $\alpha < u$. Pri majhnem $\sigma$ vidimo, da potrebujemo kar nekaj iteracij, da zaporedje začne konvergirati proti pravi vrednosti.
+Ko izberemo vecjo vrednost $\sigma$ opazimo, da se vrednost $\theta$ dostikrat v iteraciji ne spremeni, torej velja $\alpha < u$. Pri majhnem $\sigma$ vidimo, da potrebujemo kar nekaj iteracij, da zaporedje zacne konvergirati proti pravi vrednosti.
 
-Zgornje lahko opisemo tudi z deležem sprejema (acceptance rate). To pomeni, da si zabeležimo kolikokrat velja pogoj $u < \alpha$ in vrednost delimo s stevilom korakov. Pri tem velja ($\theta^{(i+1)} = \theta^*$). Idealni delež je priblizno $23%$. S tem si lahko tudi nekoliko pomagamo pri dolocitvi vrednosti $\sigma$:\
+Zgornje lahko opisemo tudi z delezem sprejema (acceptance rate). To pomeni, da si zabelezimo kolikokrat velja pogoj $u < \alpha$ in vrednost delimo s stevilom korakov. Pri tem velja ($\theta^{(i+1)} = \theta^*$). S tem si lahko tudi nekoliko pomagamo pri dolocitvi vrednosti $\sigma$:\
   - visok delez sprejema: predlagana vrednost je zelo blizu trenutni vrednosti (premiki so zelo majhni) $\rightarrow$ potrebno je povecati varianco; \
   - nizek delez sprejema: imamo veliko zavrnitev (velja $\theta^{(i+1)} = \theta^{(i)}$) $\rightarrow$ potrebno je zmanjsati varianco.
 
-Vrednosti deleza sprejma si lahko pogledamo v spodnji tabeli. Najvecja in najmanjsa vrednost sta zelo pretirani in nerealni, vendar sta dodani za lazjo predstavo.
+Teoreticno so pokazali, da je idealni delez sprejema za enodimenzionalno normalno porazdelitev 0.45-0.5, ta vrednost pa se priblizuje 0.23, ko se stevilo dimenzij povecuje. Ponavadi predlagano porazdelitev nastavimo tako, da algoritem sprejme priblizno 30% predlaganih vrednosti. 
+
+<!-- https://www.cs.cmu.edu/~epxing/Class/10708-17/notes-17/10708-scribe-lecture16.pdf -->
+<!-- http://people.ee.duke.edu/~lcarin/baystat5.pdf -->
 
 ```{r delez sprejema}
-vrednosti_sigma = c(2, 1, 0.5, 0.2, 0.05, 0.02, 0.005, 0.000001)
-vrednosti_delez_sprejema = NULL
-for (i in vrednosti_sigma){
-  vred = mean(replicate(10, metropolis_hastings_log(n_itr, x, theta_zacetek, i, mu_0, sigma_0, TRUE)[n_itr + 1]))
-  vrednosti_delez_sprejema = c(vrednosti_delez_sprejema, vred)
-}
-df_delez = data.frame("sigma" = vrednosti_sigma,
-                      "delez_sprejema" = vrednosti_delez_sprejema)
-
-kable(df_delez, digits=c(6,4), booktabs=T) %>% 
-    kable_styling(latex_options=c("striped", "hold_position"), full_width=FALSE)
+# vrednosti_sigma = c(2, 1, 0.5, 0.2, 0.05, 0.02, 0.005, 0.000001)
+# vrednosti_delez_sprejema = NULL
+# for (i in vrednosti_sigma){
+#   vred = mean(replicate(10, metropolis_hastings_log(n_itr, x, theta_zacetek, i, mu_0, sigma_0, TRUE)[n_itr + 1]))
+#   vrednosti_delez_sprejema = c(vrednosti_delez_sprejema, vred)
+# }
+# df_delez = data.frame("sigma" = vrednosti_sigma,
+#                       "delez_sprejema" = vrednosti_delez_sprejema)
+# 
+# kable(df_delez, digits=c(6,4), booktabs=T) %>% 
+#     kable_styling(latex_options=c("striped", "hold_position"), full_width=FALSE)
 ```
 
