--- a/dn2-Rupnik-Medjedovic-Krzan.Rmd
+++ b/dn2-Rupnik-Medjedovic-Krzan.Rmd
@@ -635,7 +635,7 @@ Prva razlika, ki jo najprej opazimo, je odstopanje od referncnega 95% intervala 
 
 Ko izberemo vecjo vrednost $\sigma$ opazimo, da se vrednost $\theta$ dostikrat v iteraciji ne spremeni, torej velja $\alpha < u$. Pri majhnem $\sigma$ vidimo, da potrebujemo kar nekaj iteracij, da zaporedje zacne konvergirati proti pravi vrednosti. 
 
-Na primer v primeru, ko je $\sigma = 0.00001$ konvergence sploh ne dosezemo, pri ostalih dveh manjših variancah ($0.0005$ in $0.0001$), pa je videti pri izrisu celotnega zaporedja, da konvergira, sicer pozno, k  $\theta$, ki jo iscemo. Pri vecjih $\sigma$($5, 10, 50$) pa lahko opazimo, da zaporedje nekajkrat ostane na isti $\theta$, saj imamo ob vecji varianci vec moznosti za izbiro slabse $\theta$ od trenutne in zato ne sprejmemo nove $\theta$. To se bolje vidi na grafih, kjer je prikazano prvih 1000 clenov zaporedja. 
+Na primer v primeru, ko je $\sigma = 0.00001$ konvergence sploh ne dosezemo, pri ostalih dveh manjših variancah ($0.0005$ in $0.0001$), pa je videti pri izrisu celotnega zaporedja, da konvergira, sicer pozno, k  $\theta$, ki jo iscemo. Pri vecjih $\sigma$($5, 10, 50$) pa lahko opazimo, da zaporedje nekajkrat ostane na isti $\theta$, saj imamo ob vecji varianci vecjo verjetnst za izbiro slabse $\theta$ od trenutne predlagane in zato ne sprejmemo nove. To se bolje vidi na grafih, kjer je prikazano prvih 1000 clenov zaporedja. 
 
 Zgornje lahko opisemo tudi z delezem sprejema (acceptance rate). To pomeni, da si zabelezimo kolikokrat velja pogoj $u < \alpha$ in vrednost delimo s stevilom korakov. Pri tem velja ($\theta^{(i+1)} = \theta^*$). S tem si lahko tudi nekoliko pomagamo pri dolocitvi vrednosti $\sigma$:\
   - visok delez sprejema: predlagana vrednost je zelo blizu trenutni vrednosti (premiki so zelo majhni) $\rightarrow$ potrebno je povecati varianco; \
